--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,3 @@
-.App {
-  text-align: center;
-}
 
 .App-logo {
   height: 40vmin;
@@ -35,4 +32,15 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.container{
+  display: flex;
+  margin-top: 200px;
+}
+
+.latest-work{
+  display: flex;
+  flex-direction: row;
+  column-gap: 20px;
 }
